# bahywayNews

./: README.md  bahywayNews_Projects.txt
All_Downloaded_Files(ONE Zip)/: 01_.md  DL_QUICK_START.md  DOWNLOAD_INSTRUCTIONS (1).md  QUICK_IMAGERY_REFERENCE.md  ULTIMATE_MASTER_GUIDE.md
All_Downloaded_Files(ONE Zip)/complete_package/complete_package/: README.md
All_Downloaded_Files(ONE Zip)/complete_package/complete_package/cemetery_platform/services/rust-processor/: Cargo.toml  Dockerfile  README.md
All_Downloaded_Files(ONE Zip)/complete_package/complete_package/cemetery_platform/services/rust-processor/src/: database.rs  main.rs  models.rs  parser.rs  processor.rs
Waternet Pipelines Project/Download_Files/: TWO_PROJECTS_SUMMARY.md  ULTIMATE_SUMMARY.md  WATER_PIPELINE_GUIDE.md
Waternet Pipelines Project/docs/: 01_.md  02-Convert_to_DotNet_C#_CrossPlatform_Solution_.md
docs/: 01_.md  02_bahyway_website_.md
docs/Image Analysis/: 01_.md  NAJAF CEMETERY PLATFORM - COMPLETE COMMERCIAL PRODUCT_.md
docs/Image Analysis/Download_Files/: AUTOMATED_DEPLOYMENT.md  deploy.yml  env.j2  project_structure.json
project_AI Deep Learning in Spatial Maps Image Processing/Downloads_Files/: SATELLITE_DL_STUDY_GUIDE.md
project_AI Deep Learning in Spatial Maps Image Processing/github/docs/: 01_.md
project_bahyway/: project_bahyway.txt  project_structure.json
project_bahyway/backend-services/users-service/: dockerfile  requirements.txt
project_bahyway/devops/ansible/: deploy.yml  provision.yml
project_bahyway/devops/vagrant/: vagrantfile
(+38 files in other folders)
